--- a/.gitignore
+++ b/.gitignore
@@ -47,12 +47,12 @@ Temporary Items
 .apdisk
 *.prefs
 *.actionScriptProperties
-#*.flexProperties
+*.flexProperties
 *.project
 #*.swc
 #*.png
 #*.jpg
 #*.gif
 *.txt
-#*.css
+*.css
 #*.swf
